--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -3,234 +3,293 @@ http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
 :root {
-  /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+	--ion-background-color: #fff;
+	--ion-border-color: #c4c4c4;
+	--ion-toolbar-background: transparent;
+	--ion-font-family: 'Trebuchet MS', sans-serif;
 
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+	--ion-color-primary: #1f94db;
+	--ion-color-primary-rgb: 31,148,219;
+	--ion-color-primary-contrast: #ffffff;
+	--ion-color-primary-contrast-rgb: 255,255,255;
+	--ion-color-primary-shade: #1b82c1;
+	--ion-color-primary-tint: #359fdf;
 
-  /** tertiary **/
-  --ion-color-tertiary: #5260ff;
-  --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+	--ion-color-secondary: #0e0e0e;
+	--ion-color-secondary-rgb: 14,14,14;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #0c0c0c;
+	--ion-color-secondary-tint: #262626;
 
-  /** success **/
-  --ion-color-success: #2dd36f;
-  --ion-color-success-rgb: 45, 211, 111;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
+	--ion-color-success: #6bc1bd;
+	--ion-color-success-rgb: 107,193,189;
+	--ion-color-success-contrast: #000000;
+	--ion-color-success-contrast-rgb: 0,0,0;
+	--ion-color-success-shade: #5eaaa6;
+	--ion-color-success-tint: #7ac7c4;
 
-  /** warning **/
-  --ion-color-warning: #ffc409;
-  --ion-color-warning-rgb: 255, 196, 9;
-  --ion-color-warning-contrast: #000000;
-  --ion-color-warning-contrast-rgb: 0, 0, 0;
-  --ion-color-warning-shade: #e0ac08;
-  --ion-color-warning-tint: #ffca22;
+	--ion-color-warning: #ffc409;
+	--ion-color-warning-rgb: 255,196,9;
+	--ion-color-warning-contrast: #000000;
+	--ion-color-warning-contrast-rgb: 0,0,0;
+	--ion-color-warning-shade: #e0ac08;
+	--ion-color-warning-tint: #ffca22;
 
-  /** danger **/
-  --ion-color-danger: #eb445a;
-  --ion-color-danger-rgb: 235, 68, 90;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
+	--ion-color-danger: #aa0927;
+	--ion-color-danger-rgb: 170,9,39;
+	--ion-color-danger-contrast: #ffffff;
+	--ion-color-danger-contrast-rgb: 255,255,255;
+	--ion-color-danger-shade: #960822;
+	--ion-color-danger-tint: #b3223d;
 
-  /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+	--ion-color-medium: #92949c;
+	--ion-color-medium-rgb: 146,148,156;
+	--ion-color-medium-contrast: #000000;
+	--ion-color-medium-contrast-rgb: 0,0,0;
+	--ion-color-medium-shade: #808289;
+	--ion-color-medium-tint: #9d9fa6;
 
-  /** medium **/
-  --ion-color-medium: #92949c;
-  --ion-color-medium-rgb: 146, 148, 156;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #808289;
-  --ion-color-medium-tint: #9d9fa6;
-
-  /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+	--ion-color-light: #f4f5f8;
+	--ion-color-light-rgb: 244,245,248;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #d7d8da;
+	--ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
+html, body {
+	background-color: #fff !important;
+}
 
-  body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+ion-avatar img {
+    padding: 3px;
+    border: 3px solid #fff;
+}
 
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+ion-buttons {
+    cursor: pointer;
+}
 
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
+.list-ios {
+	background: none;
+}
 
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
+ion-content {
+    --background: url('../images/background.jpg') no-repeat center/cover;
+    --padding-top: 12px;
+    --padding-bottom: 60px;
+    --padding-start: 20px;
+    --padding-end: 20px;
+}
 
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
+ion-back-button {
+    display: block;
+}
 
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
+ion-toolbar {
+    background-color: #1f94db;
+    --min-height: 80px;
+    color: #fff;
+	--border-color: none;
+	--opacity: 1;
+	--border-width: 0 !important;
+	--padding-start: 12px;
+	--padding-end: 12px;
+}
 
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
+ion-header {
+	box-shadow: 0 3px 3px #ccc;
+}
 
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
+ion-header::after {
+	--background: transparent;
+}
 
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
-
-  /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-  .ios body {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
-
-    --ion-item-background: #000000;
-
-    --ion-card-background: #1c1c1d;
-  }
-
-  .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
-    --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
+ion-header::after {
+	display: none;
+}
 
 
-  /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
 
-  .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
+.mapboxgl-ctrl-geocoder--input {
+	font-size: 14px;
+	font-weight: bold;
+	padding: 10px 45px 10px 55px;
+	height: 55px !important;
+	overflow: hidden;
+}
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+.mapboxgl-ctrl-geocoder--input::placeholder {
+	font-weight: normal;
+}
 
-    --ion-border-color: #222222;
+.mapboxgl-ctrl-geocoder {
+	box-shadow: none;
+}
 
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
+.mapboxgl-ctrl-geocoder svg {
+	display: none;
+}
 
-    --ion-item-background: #1e1e1e;
+.mapboxgl-ctrl-geocoder--input:focus {
+	outline: none;
+}
 
-    --ion-toolbar-background: #1f1f1f;
+.mapboxgl-ctrl-geocoder--pin-right button {
+	top: 0 !important;
+	right: 13px !important;
+	bottom: 0;
+}
 
-    --ion-tab-bar-background: #1f1f1f;
+.mapboxgl-ctrl-geocoder--pin-right button svg {
+	display: block;
+	margin: 0;
+	fill: #aaa !important;
+}
 
-    --ion-card-background: #1e1e1e;
-  }
+.mapboxgl-ctrl button:not(:disabled):hover {
+	background: none;
+}
+
+#geocoder1 .suggestions-wrapper {
+	position: absolute;
+	top: 100%;
+	width: 100%;
+	height: auto;
+	z-index: 123;
+	left: 50%;
+	right: 50%;
+	transform: translateX(-50%);
+}
+
+#geocoder2 .suggestions-wrapper {
+	position: absolute;
+	top: 100%;
+	width: 100%;
+	height: auto;
+	z-index: 123;
+	left: 50%;
+	right: 50%;
+	transform: translateX(-50%);
+}
+
+#geocoder .mapboxgl-ctrl-geocoder {
+	width: 100%;
+	display: block;
+	max-width: unset;
+}
+
+ion-backdrop {
+	width: 100%;
+	height: 100%;
+}
+
+ion-loading.custom-loading {
+	--backdrop-opacity: 0.9;
+	--background: #fff;
+	--spinner-color: #910720;
+	color: #fff;
+}
+
+ion-loading.custom-loading  .loading-wrapper {
+	flex-flow: column !important;
+	background: none !important;
+	border-radius: 0 !important;
+}
+
+
+ion-loading.custom-loading  .loading-wrapper .loading-content {
+	margin: 10px 0 0 !important;
+}
+
+.form-container ion-item {
+    --min-height: 56px !important;
+    --padding-start: 12px;
+    --padding-end: 12px;
+    --inner-padding-start: 0;
+    --inner-padding-end: 0;
+    --border-width: 1px;
+    --inner-border-width: 0;
+    --border-radius: 12px;
+	--background: var(--ion-color-light-tint) !important;
+    margin-bottom: 10px;
+}
+
+.form-container ion-label {
+    font-size: 12px !important;
+    margin: 10px 0 5px !important;
+    color: #1f94db !important;
+}
+
+.form-container ion-input, .form-container ion-textarea {
+    font-size: 16px;
+    line-height: 100%;
+    border: 0;
+    padding: 0;
+	border-radius: 0;
+    --color: #000 !important;
+    --inner-padding-top: 0;
+    --inner-padding-bottom: 0;
+    --inner-padding-start: 0;
+    --inner-padding-end: 0;
+    --padding-top: 0 !important;
+    --padding-bottom: 8px !important;
+    --padding-start: 0;
+    --padding-end: 0;
+    --border-width: 0;
+    --placeholder-color: #000 !important;
+    --placeholder-opacity: 1;
+	--border-radius: 0;
+}
+
+.action-sheet-group-cancel button, button.alert-button-role-confirm {
+	color: #3880ff !important;
+}
+
+ion-toast.spinner::part(icon) {
+	display: inline-block;
+	animation: spin 1s infinite linear;
+}
+
+.title_txt {
+	text-align: center;
+	margin: 0 auto;
+	display: block;
+}
+
+ion-card-header ion-avatar {
+	margin: 0 auto;
+}
+
+ion-datetime {
+	border-radius: 8px;
+	color: #000 !important;
+	min-width: 100%;
+}
+
+ion-text {
+	font-size: 21px;
+}
+
+ion-label h1 {
+	font-size: 20px !important;
+}
+
+ion-title {
+    font-size: 22px;
+}
+
+ion-avatar {
+    width: 40px;
+    height: 40px;
+}
+
+@keyframes spin {
+	0% {
+		transform:rotate(0deg)
+	}
+	100% {
+		transform:rotate(359deg)
+	}
 }
